# pf-helper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
background/: Inspiration.md
docs/: discord-bot-setup.md
docs/superpowers/plans/: 2026-05-29-pf-helper-mcp.md  2026-05-30-aon-es-supplement.md  2026-05-30-aon-foundry-links.md  2026-05-30-discord-bot.md  2026-05-31-fuzzy-cache-and-lookup-fallback.md  2026-05-31-turnkey-install.md  2026-06-01-pluggable-ask-provider.md
docs/superpowers/specs/: 2026-05-29-pf-helper-mcp-design.md  2026-05-30-aon-es-supplement-design.md  2026-05-30-aon-foundry-links-design.md  2026-05-30-discord-bot-design.md  2026-05-31-cache-tuning-harness-future.md  2026-05-31-fuzzy-cache-and-lookup-fallback-design.md  2026-05-31-turnkey-install-design.md  2026-06-01-pluggable-ask-provider-design.md
pf_helper/: __init__.py  __main__.py  cli.py  config.py  models.py  server.py  setup_flow.py  userconfig.py
pf_helper/answer/: __init__.py  base.py  cache.py  config.py  engines.py  litellm_engines.py  querylog.py  service.py  tools.py
pf_helper/bot/: __init__.py  config.py  embeds.py  main.py
pf_helper/ingest/: aon_clean.py  aon_links.py  build.py  clean.py  extract.py  sources.py
pf_helper/install/: claude_code.py  desktop.py  server_cmd.py
pf_helper/retrieval/: base.py  factory.py  fts5.py
pf_helper/store/: db.py  schema.sql
tests/: test_answer_cache.py  test_answer_engines.py  test_answer_service.py  test_answer_tools.py  test_aon_clean.py  test_aon_links.py  test_bot_config.py  test_bot_embeds.py  test_build.py  test_clean.py  test_cli.py  test_config.py  test_db.py  test_extract.py  test_install.py  test_litellm_engines.py  test_litellm_live.py  test_models.py  test_querylog.py  test_retrieval.py  test_server.py  test_server_docstrings.py  test_setup_flow.py  test_sources.py  test_userconfig.py
tests/fixtures/aon/: ritual.json  trait.json
(+4 files in other folders)
