[project]
name = "pf-helper"
version = "0.1.0"
description = "Local MCP server exposing Pathfinder 2e rules to Claude."
readme = "README.md"
authors = [
    { name = "Justin Merrick", email = "jaydee829@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]",
    "beautifulsoup4",
    "platformdirs>=4.10.0",
]

[project.scripts]
pf-helper = "pf_helper.server:main"
pf-helper-ingest = "pf_helper.ingest.build:main"
pf-helper-bot = "pf_helper.bot.main:main"

[project.optional-dependencies]
bot = [
    "claude-agent-sdk>=0.2.87",
    "discord-py>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pf_helper"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "discord-py>=2.7.1",
    "claude-agent-sdk>=0.2.87",
    "pytest-asyncio>=1.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
